kubernetes/manifests/core/network/gateway/referencegrant-media.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-http-route
  namespace: media
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: network
  to:
    - group: ""
      kind: Service
